--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -14,6 +14,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 90%;
   transition: all 0.2s;
+  overflow: visible;
 }
 
 .modal::backdrop {
@@ -69,6 +70,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  overflow: visible;
 }
 
 .modalSeparator {
