--- a/src/styles/css/mainContent.css
+++ b/src/styles/css/mainContent.css
@@ -27,12 +27,13 @@
 @media (min-width: 1024px) {
   .seccionPrincipal {
     width: 100%;
+    margin-left: 15%;
   }
 }
 
 @media (min-width: 1280px) {
   .seccionPrincipal {
-    margin-left: 20rem;
+    margin-left: 15%;
   }
 }
 
