--- a/src/styles/css/modal.css
+++ b/src/styles/css/modal.css
@@ -64,6 +64,16 @@
   }
 }
 
+.modalForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
 .modalSection {
   margin-bottom: 0.5rem;
   display: flex;
