--- a/src/styles/css/car.css
+++ b/src/styles/css/car.css
@@ -100,6 +100,7 @@
   cursor: default;
   margin-bottom: .5rem;
   transition: all 0.3s ease;
+  border: 1px solid var(--task-divider-color);
 }
 
 .carTaskListItem:last-child {
