--- a/src/styles/css/context.css
+++ b/src/styles/css/context.css
@@ -27,7 +27,7 @@
 .customContextMenu a {
   padding: 0.5rem;
   padding-top: 0.75rem /* 12px */;
-  padding-bottom: 0.75rem
+  padding-bottom: 0.75rem;
 }
 
 .customContextMenuIcon {
