--- a/src/styles/global/animations.css
+++ b/src/styles/global/animations.css
@@ -54,7 +54,7 @@
   }
   50% {
     opacity: 1;
-    transform: rotate(180deg) scale(.8);
+    transform: rotate(180deg) scale(0.8);
   }
   100% {
     opacity: 0;
@@ -63,12 +63,13 @@
 }
 
 @keyframes bounce {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(-25%);
-    animation-timing-function: cubic-bezier(0.8,0,1,1);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
   }
   50% {
     transform: none;
-    animation-timing-function: cubic-bezier(0,0,0.2,1);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
 }
