--- a/src/styles/css/car.css
+++ b/src/styles/css/car.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
-  gap: .5rem;
+  gap: 0.5rem;
   padding: 1rem;
   border-radius: 0.5rem;
   flex-shrink: 0;
@@ -25,7 +25,7 @@
 
 .carTaskForm label {
   font-weight: bold;
-  font-size: .75rem;
+  font-size: 0.75rem;
   color: var(--modal-label-color);
   margin-bottom: 0.25rem;
 }
@@ -98,7 +98,7 @@
   padding: 0.5rem;
   border-bottom: 1px solid var(--list-item-border-color);
   cursor: default;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   transition: all 0.3s ease;
   border: 1px solid var(--task-divider-color);
 }
