--- a/src/styles/css/expenses.css
+++ b/src/styles/css/expenses.css
@@ -176,7 +176,7 @@
 }
 
 .expenseGroup {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .expenseListItem {
@@ -203,7 +203,9 @@
 .expenseListItem.highlighted {
   background-color: var(--item-hover-bg-color);
   border-color: var(--highlight-border-color);
-  transition: background-color 0.3s ease, border-color 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    border-color 0.3s ease;
 }
 
 .expenseDateHeader {
