--- a/src/styles/css/shifts.css
+++ b/src/styles/css/shifts.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: .5rem;
+  padding: 0.5rem;
   transition: all 0.2s;
   gap: 0.5rem;
 }
@@ -27,7 +27,7 @@
 }
 
 .clockInButton {
-  padding: .5rem;
+  padding: 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -42,7 +42,11 @@
   }
 }
 .clockInButton:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 -4px 8px rgba(0, 0, 0, 0.2), -4px 0 8px rgba(0, 0, 0, 0.2), 4px 0 8px rgba(0, 0, 0, 0.2);
+  box-shadow:
+    0 4px 8px rgba(0, 0, 0, 0.2),
+    0 -4px 8px rgba(0, 0, 0, 0.2),
+    -4px 0 8px rgba(0, 0, 0, 0.2),
+    4px 0 8px rgba(0, 0, 0, 0.2);
 }
 .clockInButton:active {
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -176,7 +180,9 @@
 .shiftListItem.highlighted {
   background-color: var(--item-hover-bg-color);
   border-color: var(--highlight-border-color);
-  transition: background-color 0.3s ease, border-color 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    border-color 0.3s ease;
 }
 
 .shiftListItem.weekend,
