--- a/src/styles/css/tasks.css
+++ b/src/styles/css/tasks.css
@@ -109,7 +109,11 @@
   }
 }
 .houseTaskButton:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 -4px 8px rgba(0, 0, 0, 0.2), -4px 0 8px rgba(0, 0, 0, 0.2), 4px 0 8px rgba(0, 0, 0, 0.2);
+  box-shadow:
+    0 4px 8px rgba(0, 0, 0, 0.2),
+    0 -4px 8px rgba(0, 0, 0, 0.2),
+    -4px 0 8px rgba(0, 0, 0, 0.2),
+    4px 0 8px rgba(0, 0, 0, 0.2);
 }
 .houseTaskButton:active {
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -255,4 +259,5 @@ input::-webkit-inner-spin-button {
 
 input[type='number'] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
